--- a/HabitTrackerApp/Scenes/Register/RegisterViewController.xib
+++ b/HabitTrackerApp/Scenes/Register/RegisterViewController.xib
@@ -58,7 +58,7 @@
                                 <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YG7-i2-hLI">
                                     <rect key="frame" x="0.0" y="44" width="373" height="34"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                    <textInputTraits key="textInputTraits"/>
+                                    <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                 </textField>
                             </subviews>
                         </stackView>
@@ -72,7 +72,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" style="compact" translatesAutoresizingMaskIntoConstraints="NO" id="NYJ-lK-mg1">
-                                    <rect key="frame" x="187" y="0.0" width="186" height="131"/>
+                                    <rect key="frame" x="186.66666666666663" y="0.0" width="186.33333333333337" height="131"/>
                                     <locale key="locale" localeIdentifier="tr_TR"/>
                                 </datePicker>
                             </subviews>
