--- a/HabitTrackerApp/Scenes/Home /HomeView/HomeViewController.xib
+++ b/HabitTrackerApp/Scenes/Home /HomeView/HomeViewController.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="24063"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -12,6 +13,7 @@
             <connections>
                 <outlet property="calendarCollectionView" destination="m0s-L3-KPp" id="7my-bp-s3P"/>
                 <outlet property="habitCollectionView" destination="B9c-xE-HCw" id="awq-Fa-Ikj"/>
+                <outlet property="headerLabel" destination="Kgw-Sb-mRi" id="IYl-et-JOz"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -23,21 +25,24 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pPe-0p-j0k">
                     <rect key="frame" x="5" y="123" width="383" height="656"/>
                     <subviews>
-                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="200" translatesAutoresizingMaskIntoConstraints="NO" id="J3s-jo-zZ9">
-                            <rect key="frame" x="4" y="5" width="375.33333333333331" height="50"/>
+                        <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="J3s-jo-zZ9">
+                            <rect key="frame" x="15" y="5" width="353" height="44"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Today" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kgw-Sb-mRi">
-                                    <rect key="frame" x="0.0" y="0.0" width="87.666666666666671" height="50"/>
-                                    <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="30"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" horizontalCompressionResistancePriority="749" text="Hi" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kgw-Sb-mRi">
+                                    <rect key="frame" x="0.0" y="0.0" width="300" height="44"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="300" id="Emu-W7-KoW"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="25"/>
                                     <color key="textColor" systemColor="systemIndigoColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tgb-q5-bPT">
-                                    <rect key="frame" x="287.66666666666669" y="0.0" width="87.666666666666686" height="50"/>
+                                    <rect key="frame" x="313.66666666666669" y="0.0" width="39.333333333333314" height="44"/>
                                     <color key="tintColor" systemColor="systemIndigoColor"/>
                                     <state key="normal" title="Button"/>
                                     <buttonConfiguration key="configuration" style="plain" title="+" subtitle="">
-                                        <fontDescription key="titleFontDescription" type="system" pointSize="30"/>
+                                        <fontDescription key="titleFontDescription" type="system" pointSize="25"/>
                                     </buttonConfiguration>
                                     <connections>
                                         <action selector="addButtonClicked:" destination="-1" eventType="touchUpInside" id="CDF-x4-gTZ"/>
@@ -46,7 +51,7 @@
                             </subviews>
                         </stackView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="lyU-25-xMS">
-                            <rect key="frame" x="5" y="65" width="373" height="581"/>
+                            <rect key="frame" x="5" y="59" width="373" height="587"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vxc-0W-GDN">
                                     <rect key="frame" x="0.0" y="0.0" width="373" height="100"/>
@@ -67,10 +72,10 @@
                                     </constraints>
                                 </stackView>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="8BJ-D0-WJW">
-                                    <rect key="frame" x="0.0" y="110" width="373" height="471"/>
+                                    <rect key="frame" x="0.0" y="110" width="373" height="477"/>
                                     <subviews>
                                         <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="B9c-xE-HCw">
-                                            <rect key="frame" x="0.0" y="0.0" width="373" height="471"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="373" height="477"/>
                                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                             <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="6OM-6a-nJ5">
                                                 <size key="itemSize" width="300" height="128"/>
@@ -86,10 +91,11 @@
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
+                        <constraint firstAttribute="trailing" secondItem="J3s-jo-zZ9" secondAttribute="trailing" constant="15" id="6Wz-4v-Vtl"/>
                         <constraint firstItem="lyU-25-xMS" firstAttribute="leading" secondItem="pPe-0p-j0k" secondAttribute="leading" constant="5" id="AMQ-vh-7Rc"/>
                         <constraint firstAttribute="bottom" secondItem="lyU-25-xMS" secondAttribute="bottom" constant="10" id="GhC-5X-CDS"/>
-                        <constraint firstItem="J3s-jo-zZ9" firstAttribute="centerX" secondItem="pPe-0p-j0k" secondAttribute="centerX" id="Kru-hU-NCZ"/>
                         <constraint firstItem="lyU-25-xMS" firstAttribute="top" secondItem="J3s-jo-zZ9" secondAttribute="bottom" constant="10" id="SYc-gL-fHr"/>
+                        <constraint firstItem="J3s-jo-zZ9" firstAttribute="leading" secondItem="pPe-0p-j0k" secondAttribute="leading" constant="15" id="Umi-k8-wIU"/>
                         <constraint firstItem="J3s-jo-zZ9" firstAttribute="top" secondItem="pPe-0p-j0k" secondAttribute="top" constant="5" id="cct-dC-6vU"/>
                         <constraint firstAttribute="trailing" secondItem="lyU-25-xMS" secondAttribute="trailing" constant="5" id="kVT-zi-RtI"/>
                     </constraints>
