--- a/HabitTrackerApp/Scenes/Home /HomeCustomCells/HabitCollectionViewCell/HabitCollectionViewCell.xib
+++ b/HabitTrackerApp/Scenes/Home /HomeCustomCells/HabitCollectionViewCell/HabitCollectionViewCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="HabitCollectionViewCell" customModule="HabitTrackerApp" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="HabitCollectionViewCell" reuseIdentifier="HabitCollectionViewCell" id="gTV-IL-0wX" customClass="HabitCollectionViewCell" customModule="HabitTrackerApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="350" height="150"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -32,14 +32,20 @@
                                 <rect key="frame" x="10" y="20" width="250" height="110"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Habit Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kCm-5G-G4M">
-                                        <rect key="frame" x="0.0" y="0.0" width="250" height="55"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="250" height="36.666666666666664"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Goal:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Eq-pq-Yr9">
-                                        <rect key="frame" x="0.0" y="55" width="250" height="55"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <rect key="frame" x="0.0" y="36.666666666666671" width="250" height="36.666666666666671"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="⚡️" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oa7-Yz-ser">
+                                        <rect key="frame" x="0.0" y="73.333333333333329" width="250" height="36.666666666666671"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -70,6 +76,7 @@
                 <outlet property="containerView" destination="Aix-WA-NWM" id="W3L-df-SGv"/>
                 <outlet property="goalLabel" destination="2Eq-pq-Yr9" id="wd6-jw-JHW"/>
                 <outlet property="habitNameLabel" destination="kCm-5G-G4M" id="JlT-dq-aGc"/>
+                <outlet property="streakLabel" destination="Oa7-Yz-ser" id="pgY-tJ-Ztb"/>
             </connections>
             <point key="canvasLocation" x="138.93129770992365" y="129.57746478873241"/>
         </collectionViewCell>
