--- a/HabitTrackerApp/Scenes/Home /HomeCustomCells/HabitCollectionViewCell/HabitCollectionViewCell.xib
+++ b/HabitTrackerApp/Scenes/Home /HomeCustomCells/HabitCollectionViewCell/HabitCollectionViewCell.xib
@@ -18,10 +18,10 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Aix-WA-NWM">
-                        <rect key="frame" x="0.0" y="0.0" width="350" height="150"/>
+                        <rect key="frame" x="0.0" y="10" width="350" height="130"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="checkmark" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="VdN-br-cOH">
-                                <rect key="frame" x="270" y="47.333333333333329" width="60" height="56"/>
+                                <rect key="frame" x="270" y="37.333333333333329" width="60" height="56"/>
                                 <color key="tintColor" systemColor="labelColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="60" id="Ajc-Ns-nBT"/>
@@ -29,22 +29,22 @@
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="LDq-P0-yuU">
-                                <rect key="frame" x="10" y="20" width="250" height="110"/>
+                                <rect key="frame" x="10" y="20" width="250" height="90"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Habit Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kCm-5G-G4M">
-                                        <rect key="frame" x="0.0" y="0.0" width="250" height="36.666666666666664"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="250" height="30"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Goal:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Eq-pq-Yr9">
-                                        <rect key="frame" x="0.0" y="36.666666666666671" width="250" height="36.666666666666671"/>
+                                        <rect key="frame" x="0.0" y="30" width="250" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="⚡️" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oa7-Yz-ser">
-                                        <rect key="frame" x="0.0" y="73.333333333333329" width="250" height="36.666666666666671"/>
+                                        <rect key="frame" x="0.0" y="60" width="250" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -52,7 +52,7 @@
                                 </subviews>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="LDq-P0-yuU" firstAttribute="leading" secondItem="Aix-WA-NWM" secondAttribute="leading" constant="10" id="BVu-qM-xHu"/>
                             <constraint firstItem="VdN-br-cOH" firstAttribute="centerY" secondItem="Aix-WA-NWM" secondAttribute="centerY" id="Cb3-nw-K1v"/>
@@ -65,9 +65,10 @@
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="Aix-WA-NWM" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="9c8-yo-BeJ"/>
-                <constraint firstAttribute="bottom" secondItem="Aix-WA-NWM" secondAttribute="bottom" id="C3s-JY-4lF"/>
+                <constraint firstItem="Aix-WA-NWM" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="9c8-yo-BeJ"/>
+                <constraint firstAttribute="bottom" secondItem="Aix-WA-NWM" secondAttribute="bottom" constant="10" id="C3s-JY-4lF"/>
                 <constraint firstAttribute="trailing" secondItem="Aix-WA-NWM" secondAttribute="trailing" id="DUp-EE-kq4"/>
                 <constraint firstItem="Aix-WA-NWM" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="sXk-hX-b0n"/>
             </constraints>
@@ -85,9 +86,6 @@
         <image name="checkmark" catalog="system" width="128" height="114"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
     </resources>
 </document>
