--- a/HabitTrackerApp/Scenes/Login/LoginViewController.xib
+++ b/HabitTrackerApp/Scenes/Login/LoginViewController.xib
@@ -49,20 +49,21 @@
                             </subviews>
                         </stackView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dc5-V1-OHB">
-                            <rect key="frame" x="141.66666666666666" y="422" width="100" height="35.666666666666686"/>
+                            <rect key="frame" x="141.66666666666666" y="422" width="100" height="34"/>
+                            <color key="backgroundColor" systemColor="systemIndigoColor"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="100" id="IZy-Sc-pIH"/>
                             </constraints>
-                            <color key="tintColor" systemColor="systemIndigoColor"/>
-                            <buttonConfiguration key="configuration" style="filled" title="Login" subtitle="">
-                                <fontDescription key="titleFontDescription" type="system" weight="semibold" pointSize="18"/>
-                            </buttonConfiguration>
+                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                            <state key="normal" title="Login"/>
                             <connections>
                                 <action selector="loginButtonClicked:" destination="-1" eventType="touchUpInside" id="EWf-4O-p9N"/>
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hp6-af-qeT">
-                            <rect key="frame" x="73.333333333333329" y="462.66666666666663" width="236.33333333333337" height="28.333333333333314"/>
+                            <rect key="frame" x="73.333333333333329" y="461" width="236.33333333333337" height="28.333333333333314"/>
                             <color key="tintColor" systemColor="systemIndigoColor"/>
                             <state key="normal" title="Button"/>
                             <buttonConfiguration key="configuration" style="plain" title="Don't have an account? Register now.">
